force-app/main/default/objects/Case/fields/License_Expiration__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration__c</fullName>
    <label>License Expiration</label>
    <type>Date</type>
</CustomField>