force-app/main/default/objects/Case/fields/License_Issued__c.field-meta.xml
<CustomField>
    <fullName>License_Issued__c</fullName>
    <label>License Issued</label>
    <type>Date</type>
</CustomField>