force-app/main/default/objects/Case/fields/MV_Queue_PKID__c.field-meta.xml
<CustomField>
    <fullName>MV_Queue_PKID__c</fullName>
    <label>MV_Queue_PKID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>