force-app/main/default/objects/Case/recordTypes/Manual_Verification_Case.recordType-meta.xml
<RecordType>
    <fullName>Manual_Verification_Case</fullName>
    <active>true</active>
    <businessProcess>Manual Verification Case</businessProcess>
    <label>Manual Verification Case</label>
</RecordType>