force-app/main/default/objects/Case/listViews/MV_Queue_Case.listView-meta.xml
<ListView>
    <fullName>MV_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>MV Queue</label>
    <queue>MV_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>